--- a/hehe/styledate.css
+++ b/hehe/styledate.css
@@ -9,7 +9,7 @@ body{
     justify-content: center;
     align-items: center;
     height: 90vh;
-    background-color: #f3aac8;
+    background-color: #303030;
 }
 
 #noButton{
@@ -43,7 +43,7 @@ body{
 }
 
 .btn{
-    background-color: #ffb6c1;
+    background-color: #3D3635;
     color: white;
     padding: 15px 32px;
     text-align: center;
