--- a/styledate.css
+++ b/styledate.css
@@ -9,7 +9,7 @@ body{
     justify-content: center;
     align-items: center;
     height: 90vh;
-    background-color: #303030;
+    background-color: #F5F5DC;
 }
 
 #noButton{
